--- a/style.css
+++ b/style.css
@@ -21,8 +21,20 @@ body {
   background-color: bisque;
 }
 
-.button {
-  padding: 5px 10px;
+header {
+  margin: 20px 0;
+}
+
+h1 {
+  margin: 0;
+  font-size: 28px;
+  text-align: center;
+}
+
+button,
+select {
+  margin-top: 10px;
+  padding: 5px;
 
   font-size: 18px;
 }
@@ -36,7 +48,6 @@ main {
   flex-direction: column;
   width: 960px;
   height: 960px;
-  margin-top: 30px;
 }
 
 .row {
@@ -48,4 +59,9 @@ main {
   flex-grow: 1;
 
   background-color: rgb(255, 255, 255);
+  transition: background 100ms;
+}
+
+footer {
+  padding: 10px;
 }
